--- a/weather_project/weather_app/templates/weather_app/monthlyweather.html
+++ b/weather_project/weather_app/templates/weather_app/monthlyweather.html
@@ -15,7 +15,7 @@
             {{ form.as_p }}
         </div class="form-group">
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Get Monthly Data</button>
+            <button type="submit" id='monthly-btn' class="btn btn-primary">Get Monthly Data</button>
         </div>                           
     </form>
 </div>    
