--- a/weather_project/weather_app/templates/weather_app/layout.html
+++ b/weather_project/weather_app/templates/weather_app/layout.html
@@ -4,8 +4,10 @@
 <html lang="en">
     <head>
         <title>{% block title %}Weather{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">        
+        <!--link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+
         <link href="{% static 'weather_app/styles.css' %}" rel="stylesheet">
         
         <link rel="shortcut icon" href="#">   
@@ -15,16 +17,11 @@
             <a class="navbar-brand" href="{% url 'index' %}"> Weather</a>          
             <div>
               <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'weather' %}">City Weather</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'weather' %}">Search City</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'geo_view' %}">Geo location</a></li>
                     {% if user.is_authenticated %}
-<<<<<<< HEAD
-                    <li class="nav-item"><a class="nav-link" href="{% url 'monthly_weather_view' %}">MeteoStat Monthly Weather</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'monthly_weather_view' %}">Monthly Weather</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'favourites' %}">{{ user.username }}</a></li>
-=======
-                    <li class="nav-item"><a class="nav-link" href="{% url 'favourites' %}">{{ user.username }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'monthly_weather_view' %}">MeteoStat Monthly Weather</a></li>
->>>>>>> 1254c3183c42997190839d0d0b44aa8320ea6a39
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
@@ -33,9 +30,18 @@
               </ul>
             </div>
         </nav>
+
         <div class="container body">
         {% block body %}
         {% endblock %}
         </div>
+
+        <footer class="fixed-bottom bg-secondary text-center">
+        <div>
+            <div class="text-center">CS50 Capstone Project </div>
+            <div class="text-center"> &copy; Maria Amado Dominguez 2024 </div>
+        </div>
+        </footer>
+        
     </body>
 </html>
