--- a/weather_project/weather_app/templates/weather_app/weather.html
+++ b/weather_project/weather_app/templates/weather_app/weather.html
@@ -26,7 +26,7 @@
 
 {% if weather_data %}
 <div id="current-view" class ="p-1 my-1 bg-white text-dark border border-secondary">  
-    <div class="period" style="padding-left:10px"> 
+    <div class="period" style="padding:10px"> 
     <h3 >{{weather_data.name}}</h3>  
     <span class="fs-1">{{ weather_data.temperature }}°</span>
     <img src = "https://openweathermap.org/img/wn/{{weather_data.icon}}.png" style="vertical-align: bottom;">        
@@ -36,9 +36,7 @@
     <span class="fs-5">Low: {{ weather_data.temp_max}}°</span>     
     </div>
      
-    <div style="display:none;"><span id="city-lat">{{ lat }}</span><span id="city-lon">{{ lon }}</span></div>                
-    
-    
+    <div style="display:none;"><span id="city-lat">{{ lat }}</span><span id="city-lon">{{ lon }}</span></div>                    
     <ul class="fa-ul">        
         <li><div class="tooltip"><i class="fa-li fa fa-tint " aria-hidden="true"></i>
             {{weather_data.humidity}}%
@@ -69,8 +67,9 @@
      
 
     <div class='p-2'>
-        <span>Sunrise {{ weather_data.sunrise|date:"H:i" }}</span> 
-        <span>Sunset {{ weather_data.sunset|time:"H:i"  }} GMT {{ weather_data.timezone}}</span>
+        <span><i class="fa fa-sun-o m-2" aria-hidden="true"></i>Sunrise {{ weather_data.sunrise|date:"H:i" }}</span> 
+        <span><i class="fa fa-moon-o m-2" aria-hidden="true"></i>Sunset {{ weather_data.sunset|time:"H:i"  }}</span>
+        GMT {{ weather_data.timezone}}
     </div>    
 
     {% if page_name == 'cityweather'%}
