--- a/capstone/weather_app/templates/weather_app/login.html
+++ b/capstone/weather_app/templates/weather_app/login.html
@@ -3,24 +3,25 @@
 {% block body %}
 <div class="row">
    
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
     <h2>Login</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
+         <div id = 'error-msg' class = 'alert alert-warning'">{{ message }}</div>
     {% endif %}
 
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <div class="form-group">  
+            <input class="btn btn-primary" type="submit" value="Login">
+        </div>
     </form>
-
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
     </div>
 </div>    
