--- a/capstone/weather_app/templates/weather_app/register.html
+++ b/capstone/weather_app/templates/weather_app/register.html
@@ -3,28 +3,30 @@
 {% block body %}
 <div class="row">
    
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
     <h2>Register</h2>
 
     {% if message %}
-        <div>{{ message }}</div>
+        <div id = 'error-msg' class = 'alert alert-warning'">{{ message }}</div>
     {% endif %}
 
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
         </div>
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input class="form-control" type="email" name="email" placeholder="Email Address">
         </div>
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <div class="form-group">
+        <div class="mb-1 form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <div class="form-group">        
+            <input class="btn btn-primary" type="submit" value="Register">
+        </div>
     </form>
 
     Already have an account? <a href="{% url 'login' %}">Log In here.</a>
